# Heuristic_Teaching

./: .gitignore  ch2_check.txt  ch5_check.txt  docker-compose.yml  计划.md
backend/: .env.example  README.md  chunk_quality_review.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/middleware/: __init__.py  auth.py  error_handler.py
backend/app/api/v1/: __init__.py  router.py
backend/app/core/: __init__.py  context.py
backend/app/core/events/: __init__.py  event_bus.py  event_store.py  event_types.py
backend/app/core/interfaces/: __init__.py  llm_client.py  module.py  pipeline.py  repository.py
backend/app/core/orchestrator/: __init__.py  llm_orchestrator.py  output_parser.py  prompt_engine.py
backend/app/infrastructure/: __init__.py
backend/app/modules/: __init__.py
backend/app/shared/: exceptions.py
backend/data/knowledge_ontology/: knowledge_points_all.json  methods.json  type_kp_mapping.json
backend/docs/: module4-student-model-report.md
backend/scripts/: ingest_documents.py
backend/tests/: test_dashscope_client.py
backend/tests/core/: conftest.py  test_dependency_resolver.py  test_event_bus.py  test_event_store.py  test_event_types.py  test_llm_orchestrator.py  test_module_registry.py  test_output_parser.py  test_prompt_engine.py  test_session_manager.py  test_state_manager.py
backend/tests/e2e/: test_dashscope_client.py  test_module6_rag_e2e.py
backend/tests/modules/: __init__.py  test_report_20260330.md
docs/: module1-api.md  (+15 more)
(+182 files in other folders)
